--- a/OiuTools/OiuTools/frmMain.resx
+++ b/OiuTools/OiuTools/frmMain.resx
@@ -123,4 +123,7 @@
   <metadata name="barAndDockingController1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>32, 19</value>
   </metadata>
+  <metadata name="timerWallPaper.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>284, 17</value>
+  </metadata>
 </root>
